--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/mcntrn/flashchat-server#readme",
   "dependencies": {
+    "apollo-log": "^0.2.0",
     "apollo-server": "^2.13.1",
     "dotenv": "^8.2.0",
     "graphql": "^15.0.0",
