Analyze OSS using WhiteSource Bolt

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,5 +30,6 @@ steps:
     Dockerfile: '**/Dockerfile'
     tags: '$(shortversion)'
 
-
+- task: WhiteSource Bolt@20
+  displayName: 'Run WhiteSource Bolt'
 
